--- a/SMOKE_ANIMATION/SMOKE_ANIMATION.html
+++ b/SMOKE_ANIMATION/SMOKE_ANIMATION.html
@@ -8,6 +8,7 @@
     <title>smoke animation</title>
   </head>
   <body>
+      <input type="checkbox" />
     <section>
       <video src="./video/smoke.mp4" autoplay muted></video>
       <h1>
